[gd_scene load_steps=2 format=3 uid="uid://bu12mu4ubv04k"]

[ext_resource type="Script" path="res://Scripts/Classes/tower_buff.gd" id="1_050gk"]

[node name="TowerBuff" type="Node2D"]
script = ExtResource("1_050gk")
valid_tower_types = Array[bool]([true, false, true, true])

[node name="BuffTimer" type="Timer" parent="."]
one_shot = true

[connection signal="timeout" from="BuffTimer" to="." method="_on_buff_timer_timeout"]
